--- a/.travis.yml
+++ b/.travis.yml
@@ -22,11 +22,8 @@ install:
   # create the testing environment
   - conda create -n testenv --yes python=$PYTHON_VERSION pip
   - source activate testenv
-  - conda install --yes sympy pandas scikit-learn tqdm cython nose pytest pytest-cov codecov
-  - conda install --yes pytorch torchvision torchaudio cpuonly -c pytorch
-  - conda install --yes matplotlib seaborn
-  - pip install pytorch-lightning
-  - pip install codecov
+  - pip install sympy pandas scikit-learn tqdm cython nose seaborn matplotlib pytest pytest-cov codecov
+  - pip install pytorch torchvision torchaudio pytorch-lightning
   - pip install .
 
 #script:
@@ -34,8 +31,7 @@ install:
 #  - cd for_test
 #  - pytest -v --cov=dbgen --pyargs dbgen
 script:
-  - pytest --cov-report term --cov=investpy tests/
-#  - coverage run -m unittest || python3 -m unittest || python -m unittest
+  - coverage run -m unittest discover
 
 after_success:
-  - codecov
+  - bash <(curl -s https://codecov.io/bash)
