--- a/.coveragerc
+++ b/.coveragerc
@@ -2,8 +2,8 @@
 
 [run]
 branch = True
-source = tests
-include = */tests/*
+source = entropy_lens
+include = */entropy_lens/*
 omit =
     */setup.py
 
