--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,8 @@ install:
   # create the testing environment
   - conda create -n testenv --yes python=$PYTHON_VERSION pip
   - source activate testenv
-  - conda install pytorch torchvision torchaudio cpuonly -c pytorch
-  - pip install --yes sympy pandas scikit-learn tqdm cython nose seaborn matplotlib pytest pytest-cov codecov
+  - conda install --yes pytorch torchvision torchaudio cpuonly -c pytorch
+  - pip install sympy pandas scikit-learn tqdm cython nose seaborn matplotlib pytest pytest-cov codecov
   - pip install pytorch-lightning
   - pip install .
 
